  * Removed the obsolete debian/README.Debian-source.
  * For consistency upstream renamed the core client and the command tool
    ("boinc_client" to "boinc" and "boinc_cmd" to "boinccmd"). Done the same
    in all packages and created symlinks with the old names for the binaries
    and man pages. Also added an entry in debian/boinc-client.NEWS explaining
    this change.

 -- Frank S. Thomas <fst@debian.org>  Tue, 15 Apr 2008 15:09:05 +0200

boinc (6.1.15-1) experimental; urgency=low

  [ Frank S. Thomas ]
  * New experimental upstream release.
    - Improved user idle checking on Linux. (closes: #448982)
  * debian/rules:
    - Don't clean lib/boinccmd, *.unmodified and other files by hand in the
      clean-patched target, since they are now removed by upstream's
      makefiles on "make clean".
  * Removed the man pages for boinc_client, boinc_cmd, and boincmgr from the
    Debian-diff because they are now included in the upstream source and also
    handled by upstream's makefiles.
  * Rewrote debian/copyright in the format which is described in this wiki
    page: http://wiki.debian.org/Proposals/CopyrightFormat
  * debian/control:
    - BOINC now requires cURL >= 7.17.1 to build, therefore updated the
      build-dependency on libcurl4-openssl-dev and removed the alternative
      build-dependency on libcurl3-openssl-dev which cannot satisfy this
      requirement.
    - Spread the Build-Depends field over multiple physical lines to make
      reading diffs easier.

 -- Frank S. Thomas <fst@debian.org>  Tue, 15 Apr 2008 13:42:40 +0200

boinc (5.10.45-2) unstable; urgency=low

  [ Debconf translations ]
  * Added Finnish (fi.po) by Esko Arajärvi <edu@iki.fi>. (closes: #472558)

  [ Frank S. Thomas ]
  * debian/control: Updated boinc-dev's dependency on the concrete
    libstdc++-dev package now that GCC 4.3 is the default compiler.
  * debian/boinc-manager.desktop: Included Czech translations for GenericName